--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
       <h2>Projects</h2>
       <div class="projects-grid">
         <div class="project">
-          <div class="project-title">Task Tracker App</div>
+          <div class="project-title">Presenzo</div>
           <div class="project-desc">
-            A React-powered productivity tool for managing daily tasks with a modern, minimal interface.
+            An attendance system project is a software solution designed to automatically record, track, and manage attendance of students or employees efficiently.
           </div>
           <div class="project-links">
-            <a href="https://github.com/yourusername/task-tracker" target="_blank" rel="noopener">GitHub</a>
-            <a href="https://tasktracker.yoursite.com/" target="_blank" rel="noopener">Live Demo</a>
+            <a href="https://github.com/sanjeevi777/PREZENZO_2.git" target="_blank" rel="noopener">GitHub</a>
+            <a href="https://github.com/sanjeevi777/PREZENZO_2" target="_blank" rel="noopener">Live Demo</a>
           </div>
         </div>
         <div class="project">
@@ -266,8 +266,8 @@
             A customizable, fully responsive portfolio template built with best practices—perfect for developers looking to showcase their work.
           </div>
           <div class="project-links">
-            <a href="https://github.com/yourusername/portfolio-template" target="_blank" rel="noopener">GitHub</a>
-            <a href="https://portfolio.yoursite.com/" target="_blank" rel="noopener">Live Demo</a>
+            <a href="https://github.com/Harini-svn/portfolio.github.io.git" target="_blank" rel="noopener">GitHub</a>
+            <a href="https://github.com/Harini-svn/portfolio.github.io" target="_blank" rel="noopener">Live Demo</a>
           </div>
         </div>
       </div>
